crates/rspack_macros/tests/hook/unnamed_struct.stderr
error: expected named struct
 --> tests/hook/unnamed_struct.rs:4:14
  |
4 | struct Plugin(String);
  |              ^^^^^^^^
